# projet3

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: crud.py  database.py  db_models.py  main.py  model.py  preprocessing.py  schemas.py
db/: create_db.sql  schema_bdd.md
notebooks/: 01_eda_feature_engineering.ipynb  01_eda_modelisation_shap_complete.ipynb  01_feature_engineering_modelisation_finetuning_SHAP.ipynb
tests/: test_api.py  test_model.py  test_preprocessing.py
