[project]
name = "hr-attrition-project"
version = "0.1.0"
description = "Analyse des causes d'attrition au sein de TechNova Partners"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "shap>=0.45",
    "xgboost>=2.0",
    "missingno>=0.5",
    "plotly>=5.20",
    "openpyxl>=3.1",
    "jupyter>=1.0",
    "ipykernel>=6.29"
]

[tool.uv]
package = false
