[project]
name = "hr-attrition-project"
version = "0.1.0"
description = "Analyse des causes d'attrition au sein de TechNova Partners"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "shap>=0.45",
    "xgboost>=2.0",
    "missingno>=0.5",
    "plotly>=5.20",
    "openpyxl>=3.1",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.4",
    "joblib>=1.5.3",
    "sqlalchemy>=2.0.51",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
]
